# ctxgraph

./: .gitignore  Cargo.toml  README.md  ctxgraph.toml.example  product-overview.md  product-roadmap.md  v0.2-tasks.txt
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/ctxgraph-cli/: Cargo.toml
crates/ctxgraph-cli/prompts/: query_parse.txt
crates/ctxgraph-cli/src/: display.rs  main.rs
crates/ctxgraph-cli/tests/: watch_tests.rs
crates/ctxgraph-core/: Cargo.toml
crates/ctxgraph-core/src/: error.rs  graph.rs  (+1 more)
crates/ctxgraph-extract/: Cargo.toml
crates/ctxgraph-mcp/: Cargo.toml
crates/ctxgraph-mcp/src/: main.rs  server.rs  tools.rs
crates/ctxgraph-mcp/tests/: e2e_test.rs  protocol_test.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLARITY.md  EXPLAINED.md  IMPLEMENTATION-PLAN.md  README.md  ROADMAP.md  TECHNICAL-SPEC.md  llm-backends.md  research_brief.md
docs/adr/: 001-sqlite-over-neo4j.md  002-tiered-extraction.md  003-bitemporal-model.md  004-onnx-runtime-for-ml.md  005-rrf-search-fusion.md  006-unified-gliner2-model.md
docs/archive/: ARCHITECTURE_v1.md  ROADMAP_v1.md  benchmark_v0.6.md  benchmark_v0.9_round1.md
docs/deep-research/: chatgpt-dr.md  claude-dr-2.md  claude-dr.md  gemini-dr.md  grok.md
scripts/: compare_v2.py  conll04_bench.py  convert_model.py  cost_efficiency_bench.py  download_models.sh  finetune_relation_classifier.py  graphiti_openrouter_bench.py  openrouter_bench.py  prepare_training_data.py  proto_relation_match.py  run-llama-server.sh  summarize_bench.py  test_5_pieces.py  train_relclf_simple.py
(+58 files in other folders)
