[package]
name = "ctxgraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for ctxgraph — exposes graph memory to Claude and other LLMs"

[[bin]]
name = "ctxgraph-mcp"
path = "src/main.rs"

[dependencies]
ctxgraph = { path = "../ctxgraph-core", version = "0.5.1" }
ctxgraph-embed = { path = "../ctxgraph-embed", version = "0.5.1" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
